added tests for book and category controller, service, added test for book repository, added sql scripts for testing